Fix : various fixes about z-index
Various fixes about z-index

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -88,7 +88,7 @@ h2{
         @include thumbnail;
         .label{
             background-color: $color-lighter;
-            z-index: 999;
+            z-index: 9;
         }
     }
         
