--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -141,7 +141,6 @@
         background-color: $color-light;
         width: 100%;
         position: relative;
-        z-index: 99;
         padding: 40px 0;
         border-radius: 25px 25px 0px 0px;
         .rest-title-wrapper{
